--- a/index.html
+++ b/index.html
@@ -1,151 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo Repository - GitHub Features Showcase</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
+  <!-- Meta tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Title -->
+  <title>Intel Website Clone - Demo Repository</title>
+  
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="stylesheet.css">
+  
+  <!-- Favicon (optional) -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  
+  <!-- SEO & Social -->
+  <meta name="description" content="A demo repository showcasing GitHub features with an Intel website clone.">
+  <meta property="og:title" content="Intel Website Clone - Demo Repository">
+  <meta property="og:description" content="Showcasing GitHub workflows, CI/CD, and deployment.">
+  <meta property="og:type" content="website">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1><i class="fab fa-github"></i> Demo Repository</h1>
-            <p class="subtitle">Showcasing GitHub's Best Features</p>
-        </div>
-    </header>
-
+  <!-- Header -->
+  <header>
     <nav>
-        <div class="container">
-            <ul>
-                <li><a href="#features"><i class="fas fa-star"></i> Features</a></li>
-                <li><a href="#workflows"><i class="fas fa-cogs"></i> Workflows</a></li>
-                <li><a href="#structure"><i class="fas fa-folder"></i> Structure</a></li>
-                <li><a href="#badges"><i class="fas fa-shield-alt"></i> Badges</a></li>
-            </ul>
-        </div>
+      <h1>Intel Website Clone</h1>
+      <ul>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#workflow">Workflow</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
     </nav>
+  </header>
 
-    <main class="container">
-        <section id="hero">
-            <div class="hero-content">
-                <h2>Welcome to Your Demo Repository</h2>
-                <p>This repository demonstrates GitHub's powerful features with a clean, minimal setup. Perfect for learning and experimentation.</p>
-                <div class="badges">
-                    <span class="badge"><i class="fas fa-check-circle"></i> HTML Validation</span>
-                    <span class="badge"><i class="fas fa-robot"></i> Auto Assignment</span>
-                    <span class="badge"><i class="fas fa-code-branch"></i> CI/CD Ready</span>
-                </div>
-            </div>
-            <div class="hero-image">
-                <i class="fas fa-laptop-code"></i>
-            </div>
-        </section>
+  <!-- Main Content -->
+  <main>
+    <section id="features">
+      <h2>Features Showcase</h2>
+      <p>This repository demonstrates GitHub Actions, CI/CD pipelines, and deployment strategies.</p>
+    </section>
 
-        <section id="features">
-            <h2><i class="fas fa-star"></i> Key Features</h2>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-check-double"></i>
-                    </div>
-                    <h3>HTML Validation</h3>
-                    <p>Automated HTML validation on every push and pull request using GitHub Actions.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-user-tag"></i>
-                    </div>
-                    <h3>Auto Assignment</h3>
-                    <p>Issues and PRs automatically assigned to maintainers for faster response times.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-code"></i>
-                    </div>
-                    <h3>Clean Structure</h3>
-                    <p>Well-organized project structure following best practices for web development.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-bolt"></i>
-                    </div>
-                    <h3>CI/CD Ready</h3>
-                    <p>Pre-configured GitHub Actions workflows for continuous integration and deployment.</p>
-                </div>
-            </div>
-        </section>
+    <section id="workflow">
+      <h2>Workflow</h2>
+      <p>Automated builds, tests, and deployments are triggered on every push to <code>main</code>.</p>
+    </section>
 
-        <section id="workflows">
-            <h2><i class="fas fa-cogs"></i> GitHub Actions Workflows</h2>
-            <div class="workflow-cards">
-                <div class="workflow-card">
-                    <h3>Proof HTML</h3>
-                    <p><strong>Trigger:</strong> On push to main branch and pull requests</p>
-                    <p><strong>Purpose:</strong> Validates all HTML files in the repository</p>
-                    <p><strong>Tool:</strong> Uses <a href="https://github.com/anishathalye/proof-html">anishathalye/proof-html</a></p>
-                    <div class="status-badge">
-                        <img src="https://github.com/samarsand/demo-repository/actions/workflows/proof-html.yml/badge.svg" alt="Proof HTML Status">
-                    </div>
-                </div>
-                <div class="workflow-card">
-                    <h3>Auto Assign</h3>
-                    <p><strong>Trigger:</strong> When new issues or pull requests are opened</p>
-                    <p><strong>Purpose:</strong> Automatically assigns issues/PRs to maintainers</p>
-                    <p><strong>Tool:</strong> Uses <a href="https://github.com/pozil/auto-assign-issue">pozil/auto-assign-issue</a></p>
-                    <div class="status-badge">
-                        <img src="https://github.com/samarsand/demo-repository/actions/workflows/auto-assign.yml/badge.svg" alt="Auto Assign Status">
-                    </div>
-                </div>
-            </div>
-        </section>
+    <section id="about">
+      <h2>About</h2>
+      <p>Created by <strong>anal87</strong> as part of a GitHub demo project.</p>
+    </section>
+  </main>
 
-        <section id="badges">
-            <h2><i class="fas fa-shield-alt"></i> Repository Badges</h2>
-            <div class="badges-grid">
-                <div class="badge-item">
-                    <img src="https://github.com/samarsand/demo-repository/actions/workflows/auto-assign.yml/badge.svg" alt="Auto Assign">
-                    <p>Auto-assign workflow status</p>
-                </div>
-                <div class="badge-item">
-                    <img src="https://github.com/samarsand/demo-repository/actions/workflows/proof-html.yml/badge.svg" alt="Proof HTML">
-                    <p>HTML validation workflow status</p>
-                </div>
-                <div class="badge-item">
-                    <img src="https://img.shields.io/github/last-commit/samarsand/demo-repository" alt="Last Commit">
-                    <p>Last commit timestamp</p>
-                </div>
-                <div class="badge-item">
-                    <img src="https://img.shields.io/github/repo-size/samarsand/demo-repository" alt="Repo Size">
-                    <p>Repository size</p>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>Demo Repository &copy; 2024 - Showcasing GitHub's Best Features</p>
-            <div class="footer-links">
-                <a href="https://github.com/samarsand/demo-repository"><i class="fab fa-github"></i> View on GitHub</a>
-                <a href="https://github.com/samarsand/demo-repository/issues"><i class="fas fa-bug"></i> Report Issue</a>
-                <a href="https://github.com/samarsand/demo-repository/pulls"><i class="fas fa-code-branch"></i> Contribute</a>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        // Simple JavaScript for smooth scrolling
-        document.querySelectorAll('nav a').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                document.querySelector(targetId).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-    </script>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2026 Intel Website Clone Demo. All rights reserved.</p>
+  </footer>
 </body>
 </html>
