Refine HTML structure and content for clarity
Updated title and improved SEO meta tags. Enhanced accessibility and clarified content in various sections.

Signed-off-by: anal87 <SAMARHUSSAINSYED@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -6,24 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Title -->
-  <title>Intel Website Clone - Demo Repository</title>
+  <title>Intel Website Clone | Demo Repository</title>
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="stylesheet.css">
   
-  <!-- Favicon (optional) -->
+  <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   
-  <!-- SEO & Social -->
-  <meta name="description" content="A demo repository showcasing GitHub features with an Intel website clone.">
-  <meta property="og:title" content="Intel Website Clone - Demo Repository">
-  <meta property="og:description" content="Showcasing GitHub workflows, CI/CD, and deployment.">
+  <!-- SEO -->
+  <meta name="description" content="A demo repository showcasing GitHub workflows, CI/CD pipelines, and deployment strategies with an Intel website clone.">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Intel Website Clone | Demo Repository">
+  <meta property="og:description" content="Explore GitHub Actions, CI/CD workflows, and deployment strategies in this demo project.">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://github.com/anal87/intel-website">
+  <meta property="og:image" content="preview.png">
+  
+  <!-- Accessibility & Performance -->
+  <meta name="theme-color" content="#0071c5">
 </head>
 <body>
   <!-- Header -->
   <header>
-    <nav>
+    <nav aria-label="Main navigation">
       <h1>Intel Website Clone</h1>
       <ul>
         <li><a href="#features">Features</a></li>
@@ -37,23 +44,29 @@
   <main>
     <section id="features">
       <h2>Features Showcase</h2>
-      <p>This repository demonstrates GitHub Actions, CI/CD pipelines, and deployment strategies.</p>
+      <p>This repository demonstrates <strong>GitHub Actions</strong>, <strong>CI/CD pipelines</strong>, and <strong>deployment strategies</strong> with practical examples.</p>
     </section>
 
     <section id="workflow">
       <h2>Workflow</h2>
-      <p>Automated builds, tests, and deployments are triggered on every push to <code>main</code>.</p>
+      <p>Automated builds, tests, and deployments are triggered on every push to the <code>main</code> branch, ensuring continuous integration and delivery.</p>
+      <ul>
+        <li>✅ Build automation</li>
+        <li>✅ Unit & integration testing</li>
+        <li>✅ Deployment to staging/production</li>
+      </ul>
     </section>
 
     <section id="about">
       <h2>About</h2>
-      <p>Created by <strong>anal87</strong> as part of a GitHub demo project.</p>
+      <p>Created by <strong>anal87</strong> as part of a GitHub demo project to showcase modern development workflows.</p>
     </section>
   </main>
 
   <!-- Footer -->
   <footer>
     <p>&copy; 2026 Intel Website Clone Demo. All rights reserved.</p>
+    <p><a href="https://github.com/anal87/intel-website" target="_blank" rel="noopener">View on GitHub</a></p>
   </footer>
 </body>
 </html>
